Changelog 1.0.1.3
-----------------
[NO-TICKET] SallyAPI: more controls now also accepts GUI_NO_IMAGE (which is -1) as no image - before it was only NULL accepted
[NO-TICKET] SallyAPI: fixed the rendering of the image in the CIMageBox when IMAGEBOX_DISPLAY_TYPE_CENTER was set


Changelog 1.0.1.2
-----------------
[NO-TICKET] Sally: Crash in FileBrowser when we can't find one of the special folder (music, video, ...)


Changelog 1.0.1.1
-----------------
[NO-TICKET] Changed the fullscreen info key from "enter" to "info-key"
[NO-TICKET] Sally: corrected the mouse handling of the CRating control
[SA-00541] SallyAPI: update vlc libs


Changelog 1.0.0.2
-----------------
[NO-TICKET] MediaPlayer: changed the handling of the doubleclick and mouse move in fullscreen mode
[NO-TICKET] ImageBrowser: changed the handling of the doubleclick and mouse move in fullscreen mode


Changelog 1.0.0.1
-----------------
[SA-00527] SallyAPI: small rating control - view only
[SA-00523] MediaPlayer: add current playing to the screensaver overlay
[SA-00528] Sally Tools: delete not longer used files from the installation directory
[SA-00530] Sally Tools: the text in the Tool windows is not readable when a high DPI size is used
[SA-00531] MediaPlayer: folders which are copied are sometimes not included in the DB
[SA-00533] MediaPlayer: show info, if the playlist is empty and the user tries to start it from the screensaver mode
[SA-00534] SallyAPI: change the CCheckbox render behavior
[SA-00535] SallyAPI: change the CRadioButton render behavior
[SA-00536] Sally: check crash on sally exit
[NO-TICKET] SallyAPI: added OpenURL to NetworkHelper
[NO-TICKET] MediaPlayer: changed the calculation of the time slider
[SA-00464] Sally: update to vlc 2.0
[NO-TICKET] SallyAPI: hide / show the CScreensaverControlLabel if empty / filled
[NO-TICKET] Sally: case insensitive sorting for the menu application selector
[NO-TICKET] ImageBrowser: some files are not added to the database